# RelicHunter

./: .gitignore  CMakeLists.txt  README.md  Setting.h  main.cpp  resources.qrc
Entity/: Entity.h
GUI/: LoadingScene.h  WindowController.h
animationWindow/: Animation.cpp  Animation.h
model/: GameEngine.cpp  GameEngine.h
model/entity/movingEntities/: MovingEntity.h
model/entity/movingEntities/characters/: Character.cpp  Character.h
model/entity/movingEntities/characters/controls/: Controller.h  EnermyController.h  FrendlyController.h  ManualController.h
model/scene/: Scene.cpp  Scene.h
resources/: TextureShader.fs  TextureShader.vs
resources/Strings/StartingSceneJson/: cn.json  en.json
src/: Game.h  glad.c  main.cpp
src/GameEngine/: Core.h  EntryPoint.h  Log.cpp  Log.h
src/GameEngine/Events/: ApplicationEvent.h  Event.h  KeyCode.h  KeyEvent.h  MouseEvent.h
src/GameEngine/Model/core/: GameEngine.cpp  GameEngine.h
src/GameEngine/Model/entity/: Entity.cpp  Entity.h
src/GameEngine/Model/entity/movingEntities/: MovingEntity.h
src/GameEngine/Model/entity/movingEntities/characters/: Character.h
src/GameEngine/Model/entity/movingEntities/characters/controls/: Controller.h
src/GameEngine/Model/scene/: Scene.h
src/GameEngine/View/: Texture.cpp  Texture.h
src/GameEngine/View/InputHandlers/: InputHandler.h  KeyBoardHandler.h
src/GameEngine/View/common/: Cursor.h  GLEntity.h
src/GameEngine/View/glShader/: Shader.cpp  Shader.h
src/Model/core/: GameEngine.h  Log.cpp  Log.h
src/Model/entity/movingEntities/: MovingEntity.h
src/Model/entity/movingEntities/characters/: Character.h
src/Model/entity/movingEntities/characters/controls/: Controller.h  ManualController.h
src/Model/scene/: Scene.h
src/include/: Tools.h  stb_image.cpp
src/include/GLFW/: glfw3.h
src/include/glad/: glad.h
src/include/spdlog/details/: circular_q.h
src/include/spdlog/fmt/bundled/: core.h
src/view/: BasicScene.h  LoadingScene.h  WindowController.h
src/view/animation/: Animation.h
src/view/soundPlayer/: SoundPlayer.cpp  SoundPlayer.h
view/: BasicScene.h  LoadingScene.h  WindowController.cpp  WindowController.h
view/animation/: Animation.cpp  Animation.h
view/system/: animation.h
